// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Blank render renders correctly with default props 1`] = `
<WithStyles(Chip)
  className="undefined"
  classes={
    Object {
      "label": false,
    }
  }
  component="span"
  label={
    <React.Fragment>
      <span
        className=""
      >
         
      </span>
    </React.Fragment>
  }
/>
`;

exports[`Blank render renders correctly with disabled prop as true 1`] = `
<WithStyles(Chip)
  className="undefined"
  classes={
    Object {
      "label": false,
    }
  }
  component="span"
  label={
    <React.Fragment>
      <span
        className=""
      >
         
      </span>
    </React.Fragment>
  }
  variant="outlined"
/>
`;

exports[`Blank render renders correctly with draggedItem 1`] = `
<WithStyles(Chip)
  className="undefined"
  classes={
    Object {
      "label": false,
    }
  }
  component="span"
  label={
    <React.Fragment>
      <span
        className=""
      >
         
      </span>
    </React.Fragment>
  }
/>
`;

exports[`Blank render renders correctly with draggedItem and isOver 1`] = `
<WithStyles(Chip)
  className="undefined"
  classes={
    Object {
      "label": undefined,
    }
  }
  component="span"
  label={
    <React.Fragment>
      <span
        className="undefined"
      >
         
      </span>
      <span
        className=""
      >
         
      </span>
    </React.Fragment>
  }
/>
`;
